# basic_django_project

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
conf/: urls.py
conf/settings/: base.py
my_project/apps/drf/: apps.py  models.py  serializers.py  urls.py  views.py
my_project/apps/drf/migrations/: 0001_initial.py
