[tool.poetry]
name = "basic_django_project"
version = "0.1.0"
description = ""
authors = ["Cheiras"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.1"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.6"
djangorestframework = "^3.14.0"
pytest-django = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
